# fhir-server-compare

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  METHODOLOGY.md  MIGRATION.md  Makefile  README.md  ROADMAP.md  SECURITY.md  TODOS.md  compare.py  docker-compose.conformance-features.yml  docker-compose.conformance.yml  docker-compose.loadtest.yml  docker-compose.yml  load_bundle.py  medplum-lb.conf  medplum.config.json  pyproject.toml  queries.yaml  requirements.txt  servers.yaml
.github/workflows/: ci.yml
benchmark/: methodology.md
benchmark/profiles/: crud.yaml
config/: medplum-lb.conf  queries.yaml  servers.yaml
conformance/: methodology.md
conformance-docker/: Dockerfile.auth-proxy
conformance/profiles/: bulk-data-v2.yaml
docker/conformance-services/: Dockerfile.testscript-engine  auth_proxy.py
docker/spark-mongo-init/: 01-create-indexes.js  README.md
docs/: benchmark-methodology.md  conformance-methodology.md
hfs-docker/: Dockerfile  Dockerfile.fork
loadtest/: __init__.py  aidbox_bootstrap.py  bootstrap_medplum.py  generate.py  host_meta.py  k6_driver.py  loader.py  metrics.py  ramp.py  report.py  resources.py  sample_pool.py  stage.py  update_templates.py  wait_healthy.py  workload_crud.py  workload_search.py
loadtest/benchmark/: cell_summary.py  parse_report.py  summary.py
loadtest/conformance/: parse_report.py  run.py  runner.py  summary.py
loadtest/k6/: crud.js  k6_context.json  postprocess.py  search.js
loadtest/publish/: badges.py  copy_to_studio.py
profiles/benchmark/: ingest.yaml  search.yaml
schema/: round-v1.schema.json
scripts/: emit_k6_context.py  fetch_server_versions.py  setup-host.sh  smoke.sh
spark-mongo-init/: 01-create-indexes.js
tests/: conftest.py  test_parse_report.py  test_runner.py  test_servers.py
(+79 files in other folders)
