[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fhirbench"
version = "0.1.0"
description = "Neutral-territory FHIR server benchmark harness — conformance + performance across HAPI, Aidbox, Medplum, MS FHIR, Blaze, Spark."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "mock.health" }]
keywords = ["fhir", "benchmark", "conformance", "healthcare", "hl7"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "pyyaml",
  "requests",
]

[project.urls]
Homepage    = "https://github.com/mock-health/fhir-server-compare"
Repository  = "https://github.com/mock-health/fhir-server-compare"
Issues      = "https://github.com/mock-health/fhir-server-compare/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[project.scripts]
fhirbench-ramp        = "fhirbench.harness.ramp:main"
fhirbench-compare     = "fhirbench.compare:main"
fhirbench-conformance = "fhirbench.conformance.run:main"
fhirbench-publish     = "fhirbench.publish.copy_to_studio:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Distribute the JS/JSON harness assets that ship with the package
fhirbench = ["k6/*.js", "k6/lib/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
